--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "can": "^2.3.24",
     "jquery": "^2.2.4",
-    "steal": "^1.0.0-beta.3"
+    "steal": "^1.0.0-beta.3",
+    "steal-sass": "^1.0.3"
   },
   "devDependencies": {
     "steal-tools": "^1.0.0-beta.2"
